@@ -3,6 +3,8 @@ package com.datahub.authorization.fieldresolverprovider;
 import com.datahub.authorization.EntityFieldType;
 import com.datahub.authorization.EntitySpec;
 import com.datahub.authorization.FieldResolver;
+import com.linkedin.common.Owner;
+import com.linkedin.common.OwnerArray;
 import com.linkedin.common.Ownership;
 import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
@@ -11,8 +13,8 @@ import com.linkedin.entity.EnvelopedAspect;
 import com.linkedin.entity.client.SystemEntityClient;
 import com.linkedin.metadata.Constants;
 import io.datahubproject.metadata.context.OperationContext;
-import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 import lombok.RequiredArgsConstructor;
@@ -27,7 +29,7 @@ public class OwnerFieldResolverProvider implements EntityFieldResolverProvider {
 
   @Override
   public List<EntityFieldType> getFieldTypes() {
-    return Collections.singletonList(EntityFieldType.OWNER);
+    return List.of(EntityFieldType.OWNER);
   }
 
   @Override
@@ -51,7 +53,8 @@ public class OwnerFieldResolverProvider implements EntityFieldResolverProvider {
               opContext,
               entityUrn.getEntityType(),
               entityUrn,
-              Collections.singleton(Constants.OWNERSHIP_ASPECT_NAME));
+              Set.of(Constants.OWNERSHIP_ASPECT_NAME),
+              false);
       if (response == null || !response.getAspects().containsKey(Constants.OWNERSHIP_ASPECT_NAME)) {
         return FieldResolver.emptyFieldValue();
       }
@@ -61,11 +64,14 @@ public class OwnerFieldResolverProvider implements EntityFieldResolverProvider {
       return FieldResolver.emptyFieldValue();
     }
     Ownership ownership = new Ownership(ownershipAspect.getValue().data());
+    OwnerArray owners = ownership.getOwners();
     return FieldResolver.FieldValue.builder()
         .values(
-            ownership.getOwners().stream()
-                .map(owner -> owner.getOwner().toString())
-                .collect(Collectors.toSet()))
+            owners.stream()
+                .map(Owner::getOwner)
+                .map(Urn::toString)
+                .collect(Collectors.toUnmodifiableSet()))
+        .typedValues(Set.copyOf(owners))
         .build();
   }
 }
